# jungle-janitor

./: .gitignore  LICENSE  README.md  ape-config.yaml  bot.py  hello.py  pyproject.toml
.github/workflows/: lint.yml
tests/: conftest.py  test_liquidation.py
