[project]
name = "jungle-janitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["eth-ape>=0.8.24", "silverback>=0.6.5"]

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "ruff>=0.9.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

extend-select = ["I"]
